--- a/first website.html
+++ b/first website.html
@@ -1,3 +1,30 @@
+
+<!DOCTYPE html>
+
+<html>
+
+<head>
+	<title>First Website</title>
+	<style>
+	body  {
+			background-color: lavender; 
+		}
+		
+	   h1 {
+		    font-size: 100pt;
+			color: silver;
+		}
+		
+		p {
+			font-size: 20;
+			color: gold;
+		}
+	</style>
+</head>
+
+<body>
+
+
 <h1>Jayden Yung</h1>
 <h3>About me</h3>
 <p>Hi, my name is Jayden Yung. I'm 15 years old and am currently in grade 10 in the Byng Arts program for drama.</p>
@@ -22,3 +49,11 @@
 <p><iframe width="560" height="315" src="https://www.youtube.com/embed/uR8Mrt1IpXg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
 
 <img src="hqdefault.jpg">
+
+</body>
+
+</html>
+
+
+
+
