--- a/first website.html
+++ b/first website.html
@@ -6,24 +6,39 @@
 <head>
 	<title>First Website</title>
 	<style>
-	body  {
-			background-color: lavender; 
+	
+		h1	{
+		    font-size: 80pt;
+			color: #761B95;
 		}
 		
-	   h1 {
-		    font-size: 100pt;
-			color: silver;
-		}
-		
-		p {
+		p	{
 			font-size: 20;
-			color: gold;
+			color: #F0E2F5;
+		}
+
+		body	{
+			background-color: black;
+			color: lavender;
+			font-family: Montserrat MS;
+			font-size: 14pt;
+		}
+		
+		div	{ 
+			width: 800px;
+			border: 3px solid purple;
+			margin-left: auto;
+			margin-right: auto;
+			margin-top: 50px;
+			padding: 20px;
+			background-color: #D3A2DA;
 		}
 	</style>
 </head>
 
 <body>
 
+<div>
 
 <h1>Jayden Yung</h1>
 <h3>About me</h3>
@@ -49,6 +64,8 @@
 <p><iframe width="560" height="315" src="https://www.youtube.com/embed/uR8Mrt1IpXg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
 
 <img src="hqdefault.jpg">
+
+</div>
 
 </body>
 
