--- a/first website.html
+++ b/first website.html
@@ -7,32 +7,68 @@
 	<title>First Website</title>
 	<style>
 	
-		h1	{
-		    font-size: 80pt;
-			color: #761B95;
+		a:link	{
+			color:
 		}
 		
-		p	{
-			font-size: 20;
-			color: #F0E2F5;
+		a:visited	{
+			color;
 		}
-
+		
+		a:active	{
+			color:
+		}
+		
+		a:hover	{
+			color:
+			background-color: 
+		}
+		
 		body	{
 			background-color: black;
-			color: lavender;
-			font-family: Montserrat MS;
+			background-image:
+			url('persona.jpg');
+			background-position: center;
+			background-repeat: no-repeat;
+			background-size: cover;
+			color: #DC372B;
+			font-family: ;
 			font-size: 14pt;
 		}
 		
 		div	{ 
-			width: 800px;
-			border: 3px solid purple;
+			background-color: black;
+			border: 6px solid #B50C00;
 			margin-left: auto;
 			margin-right: auto;
 			margin-top: 50px;
+			width: 800px;
 			padding: 20px;
-			background-color: #D3A2DA;
+		} 
+		
+		h1	{
+			color: #DA0F00;
+		    font-size: 80pt;	
 		}
+		
+		h2	{
+			color: #F5F2F2;
+		    font-size: 30pt;	
+		}
+		
+		img	{
+			float: left;
+			margin-right: 20px;
+			margin-bottom: 10;
+		}
+		p, li	{
+			color: #DC372B;
+			font-size: 20pt;
+			text-align:
+			line-height: 1.5em;
+		}
+
+		
 	</style>
 </head>
 
@@ -41,19 +77,27 @@
 <div>
 
 <h1>Jayden Yung</h1>
-<h3>About me</h3>
+
+<img src="phantom.jpg" width="300px">
+
+<h2>About me</h2>
+
 <p>Hi, my name is Jayden Yung. I'm 15 years old and am currently in grade 10 in the Byng Arts program for drama.</p>
 
 <p>I'm a very honest and up front person and if something is bothering me i'll bring it up. I'm empathetic and am great at listening to people and giving advice</p>
 
-<h3>Things I like:</h3>
+<br>
+<br>
+<br>
+
+<h2>Things I like:</h2>
 <ul>
-	<li>Kpop</li>
-	<li>Fashion</li>
 	<li>Music</li>
+	<li>RPGs</li>
+	<li>Japan</li>
 </ul>
 
-<h3>Things I don't like:</h3>
+<h2>Things I don't like:</h2>
 <ul>
 	<li>bugs</li>
 	<li>parsley</li>
@@ -62,8 +106,6 @@
 <p>Link to <a href="https://en.stylenanda.com/">a website</a > I think is great: </p> 
 
 <p><iframe width="560" height="315" src="https://www.youtube.com/embed/uR8Mrt1IpXg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
-
-<img src="hqdefault.jpg">
 
 </div>
 
